test/pass/io/write_then_read.lily
var f = File.open("io_test_file.txt", "w")
f.write("1234567890")
f.close()

f = File.open("io_test_file.txt", "r")
if f.read_line().encode().unwrap() != "1234567890":
    stderr.print("Failed.")
